-Matched the widths of the first two sidebars on the right -Placeholder of "Start new post" section's URL fixed -Added left padding to the placeholder -Matched the veritcal alignment of the text and placeholder with background-position

--- a/Front-End Course/1.Beginner Level Front-End Course/3.BOOTSTRAP/Buggy LinkedIN Clone/css/style.css
+++ b/Front-End Course/1.Beginner Level Front-End Course/3.BOOTSTRAP/Buggy LinkedIN Clone/css/style.css
@@ -82,10 +82,11 @@ input.content {
 input.content::placeholder {
   font-weight: bolder;
   font-size: 14px;
+  padding-left: 20px;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url(/bootstraplinkedinclone/assets/edit-regular.svg);
+  background-image: url(../assets/edit-regular.svg);
   background-repeat: no-repeat;
-  background-size: auto;
+  background-position: 0px center;
 
 }
 
